# invogen

./: .gitignore  Cargo.toml  Changelog.md  README.md  askama.toml  build.rs  devenv.nix  flake.nix  shell.nix
.github/workflows/: nix-build.yaml
src/: billing.rs  calendar.rs  cli.rs  clients.rs  error.rs  historical.rs  input.rs  invoices.rs  ledger_fmt.rs  main.rs  run.rs  templates.rs
templates/: client.tex  invoice.tex
