[package]
name = "invogen"
version = "0.2.0"
authors = ["William Kral <william.kral@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_escape = "0.10.3"
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
const_format = "0.2.32"
inquire = { version = "0.6.2", features = ["date"] }
rust_decimal = { version = "1.32.0", features = ["serde-float"] }
lexpr = "0.2.7"
serde = { version = "~1.0", features = ["derive"] }
serde-lexpr = "0.1.3"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0"

[build-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.4.4"

[dev-dependencies]
proptest = "1.0.0"
