[package]
name = "invogen"
version = "0.2.0"
authors = ["William Kral <william.kral@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14.0"
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
const_format = "0.2.32"
inquire = { version = "0.7.5", features = ["date"] }
rust_decimal = { version = "1.39.0", features = ["macros", "serde-float"] }
lexpr = "0.2.7"
num-format = "0.4.4"
serde = { version = "~1.0", features = ["derive"] }
serde-lexpr = "0.1.3"
strum = "0.26.0"
strum_macros = "0.26.4"
thiserror = "1.0"

[build-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.4.4"

[dev-dependencies]
proptest = "1.0.0"
rust_decimal_macros = "1.39.0"
