[package]
name = "invogen"
version = "0.2.0"
authors = ["William Kral <william.kral@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
const_format = "0.2.32"
inquire = { version = "0.9.1", features = ["date"] }
rust_decimal = { version = "1.39.0", features = ["macros", "serde-float"] }
lexpr = "0.2.7"
num-format = "0.4.4"
serde = { version = "~1.0", features = ["derive"] }
serde-lexpr = "0.1.3"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0"

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"

[dev-dependencies]
proptest = "1.0.0"
rust_decimal_macros = "1.39.0"
